chore: Fixes for ProxyTestSuite
Closes: XRDDEV-2584, XRDDEV-2585